<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alwaysUse">Use by default for this action.</string>
    <string name="connect_joystick_notification_title">External joystick connected</string>
    <string name="connect_keyboard_notification_title">External keyboard connected</string>
    <string name="date_picker_decrement_day_button">Decrease day</string>
    <string name="date_picker_decrement_month_button">Decrease month</string>
    <string name="date_picker_decrement_year_button">Decrease year</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_picker_increment_day_button">Increase day</string>
    <string name="date_picker_increment_month_button">Increase month</string>
    <string name="date_picker_increment_year_button">Increase year</string>
    <string name="date_time_done">Done</string>
    <string name="datetime_dialog_title">Set Date&amp;Time</string>
    <string name="disconnect_joystick_notification_title">External joystick removed</string>
    <string name="disconnect_keyboard_notification_title">External keyboard removed</string>
    <string name="global_action_quickpower_off">Quick start is OFF</string>
    <string name="global_action_quickpower_on">Quick start is ON</string>
    <string name="global_action_rboot_message">Power off your phone when long pressing Power key for 10s</string>
    <string name="global_action_reset">Restart</string>
    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>
    <string name="multi_language_20404">China Telecom</string>
    <string name="multi_language_46000">China Mobile</string>
    <string name="multi_language_46001">China Unicom</string>
    <string name="multi_language_46002">China Mobile</string>
    <string name="multi_language_46003">China Telecom</string>
    <string name="multi_language_46007">China Mobile</string>
    <string name="multi_language_46019">460 19</string>
    <string name="noApplications">No apps can perform this action.</string>
    <string name="no_content">No corresponding content</string>
    <string name="ota_mount_notification_message">Select to copy files to/from external storage device</string>
    <string name="ota_mount_notification_title">External storage device connected</string>
    <string name="ota_unexpectedly_removed_notification_message">Unmount external storage device before removing to avoid data loss</string>
    <string name="ota_unexpectedly_removed_notification_title">External storage devices unexpectedly removed</string>
    <string name="ota_unmount_notification_message">Unmount the external storage device so you can safely remove it</string>
    <string name="ota_unmount_notification_title">Unmount external storage device</string>
    <string name="ota_unmounted_notification_title">External storage device Unmounted</string>
    <string name="pppoe_indicator_detail_connect_failure">Unconnected</string>
    <string name="pppoe_indicator_detail_connected">Connected</string>
    <string name="pppoe_indicator_detail_connecting">Connecting...</string>
    <string name="pppoe_indicator_title">PPPOE</string>
    <string name="reboot_confirm">Your phone will restart.</string>
    <string name="reboot_confirm_question">Do you want to restart?</string>
    <string name="reboot_title">Restart</string>
    <string name="search_go">Search</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_query">Search query</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="set_silent">Silent</string>
    <string name="system_res_label">System Resources Package</string>
    <string name="textoff" />
    <string name="texton" />
    <string name="time_picker_decrement_hour_button">Decrease hour</string>
    <string name="time_picker_decrement_minute_button">Decrease minute</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="time_picker_increment_hour_button">Increase hour</string>
    <string name="time_picker_increment_minute_button">Increase minute</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="toast_wifi_connected_message">Has connected to SSID %1$s.</string>
    <string name="whichApplication">Complete action using</string>
    <string name="whichHomeApplication">Select a home app</string>
    <string name="wifi_hotspot_turned_off">WLAN Hotspot turned off</string>
    <string name="wifi_hotspot_turned_off_summary">Sleep time is activated, you can modify it in WLAN hotspot-Advanced-Hotspot sleep policy.</string>
    <string name="zte_days_of_week_Fri">Fri</string>
    <string name="zte_days_of_week_Mon">Mon</string>
    <string name="zte_days_of_week_Sat">Sat</string>
    <string name="zte_days_of_week_Sun">Sun</string>
    <string name="zte_days_of_week_Thu">Thu</string>
    <string name="zte_days_of_week_Tue">Tue</string>
    <string name="zte_days_of_week_Wed">Wed</string>
    <string name="back_button_label">Back</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="app_name">Navigation Key</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tips1">You can define the navigation key by daily habits</string>
    <string name="tips2">If you like left hand operating, we suggest</string>
    <string name="tips3">If you like right hand operating, we suggest</string>
    <string name="tips8"></string>
    <string name="tips5">            Rencent        Home            Back</string>
    <string name="tips4">             Back             Home          Rencent</string>
    <string name="tips7">          Menu                                          Back</string>
    <string name="tips6">          Back                                          Menu</string>
</resources>
