<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout" android:layout_width="320.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip">
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="17.0sp" android:textColor="#ff757575" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginRight="1.0dip" android:text="@string/tips1" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <TextView android:textSize="15.0sp" android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips2" />
        </LinearLayout>
        <View android:background="#ffdcdcdc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:id="@id/LinearLayout3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout31" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:id="@id/ImageView_1" android:layout_width="240.0dip" android:layout_height="wrap_content" android:src="@drawable/recent_apps_left_disabled" android:onClick="true" />
                <TextView android:textSize="12.0sp" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/tips4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout32" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1">
                <RadioButton android:id="@id/radioButton1" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="1.0dip" />
            </LinearLayout>
        </LinearLayout>
        <View android:background="#ffdcdcdc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <TextView android:textSize="15.0sp" android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips3" />
        </LinearLayout>
        <View android:background="#ffdcdcdc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:id="@id/LinearLayout5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="0.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout51" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:id="@id/ImageView_2" android:layout_width="240.0dip" android:layout_height="wrap_content" android:src="@drawable/recent_apps_right_disabled" android:onClick="true" />
                <TextView android:textSize="12.0sp" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/tips5" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout52" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.1">
                <RadioButton android:id="@id/radioButton2" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="1.0dip" />
            </LinearLayout>
        </LinearLayout>
        <View android:background="#ffdcdcdc" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <TextView android:textSize="15.0sp" android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips8" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>